unpackaged/objects/copado__Compliance_Rule__c.object
<CustomObject>
	<description>This object stores the compliance rule definition.</description>
	<fields>
		<fullName>copado__Action__c</fullName>
		<inlineHelpText>Action to be performed automatically by Copado</inlineHelpText>
		<label>Action</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Compliance_Action</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Active__c</fullName>
		<defaultValue>true</defaultValue>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Error_Message__c</fullName>
		<inlineHelpText>The message that will be displayed when this rule is triggered.</inlineHelpText>
		<label>Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Filter_Criteria__c</fullName>
		<inlineHelpText>Criteria filter query</inlineHelpText>
		<label>Filter Criteria</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Is_Valid__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>Automatically updated by copado when saving managing criteria</inlineHelpText>
		<label>Is Valid</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Last_Validation_Date_time__c</fullName>
		<label>Last Validation Date/time</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Last_Validation_Status_Message__c</fullName>
		<label>Last Validation Status Message</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Matching_Criteria__c</fullName>
		<inlineHelpText>Operator between Record Count Criteria and Record Count</inlineHelpText>
		<label>Matching Criteria</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Equals</fullName>
				</value>
				<value>
					<fullName>Not Equals</fullName>
				</value>
				<value>
					<fullName>Less Than</fullName>
				</value>
				<value>
					<fullName>Less or Equal</fullName>
				</value>
				<value>
					<fullName>Greater Than</fullName>
				</value>
				<value>
					<fullName>Greater or Equal</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Metadata_Type__c</fullName>
		<label>Metadata Type</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Record_Count_Criteria__c</fullName>
		<label>Record Count Criteria</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Number of groups</fullName>
					<default>true</default>
					<label>Number of groups</label>
				</value>
				<value>
					<fullName>Number of files</fullName>
					<isActive>false</isActive>
					<label>Number of files</label>
				</value>
				<value>
					<fullName>Number of properties</fullName>
					<isActive>false</isActive>
					<label>Number of properties</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Record_Count__c</fullName>
		<inlineHelpText>Number of returned values to assert.</inlineHelpText>
		<label>Record Count</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Risk_Details__c</fullName>
		<label>Risk Details</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Severity__c</fullName>
		<inlineHelpText>Field to report on the Lightning Platform, Copado Doesn&apos;t action over this field</inlineHelpText>
		<label>Severity</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Compliance_Severity</valueSetName>
		</valueSet>
	</fields>
	<label>Compliance Rule</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Active__c</columns>
		<columns>copado__Severity__c</columns>
		<columns>copado__Action__c</columns>
		<columns>copado__Risk_Details__c</columns>
		<columns>copado__Error_Message__c</columns>
		<columns>CREATEDBY_USER</columns>
		<columns>LAST_UPDATE</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Compliance Rule Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Compliance Rules</pluralLabel>
	<recordTypes>
		<fullName>copado__Copado</fullName>
		<active>true</active>
		<description>Use this record type to define scan rules run by Copado.</description>
		<label>Copado</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__Other</fullName>
		<active>true</active>
		<description>Use this record type to define scan rules for 3rd party systems.</description>
		<label>Other</label>
	</recordTypes>
	<sharingModel>ReadWrite</sharingModel>
	<validationRules>
		<fullName>copado__Required_Criteria_Fields</fullName>
		<active>false</active>
		<errorConditionFormula>OR(
ISPICKVAL(copado__Matching_Criteria__c ,&quot;&quot;),
ISPICKVAL(copado__Record_Count_Criteria__c,&quot;&quot;),
ISNULL(copado__Record_Count__c),
ISBLANK(copado__Record_Count__c))</errorConditionFormula>
		<errorMessage>Matching Criteria, Record Count and Record Count Criteria are required fields.</errorMessage>
	</validationRules>
</CustomObject>